Added a markdown cell for the link to the interactive map

--- a/nakuru_amenities_notebook.ipynb
+++ b/nakuru_amenities_notebook.ipynb
@@ -86,11 +86,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ba8d4a6f-77cd-4910-ade1-0901f75209b6",
+   "cell_type": "markdown",
+   "id": "ad57c69a",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "[Click here to view the interactive map](nakuru_amenities_map_osm.html)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9630a7a9",
+   "metadata": {},
    "source": []
   }
  ],
